Add equations & some content to notebook

--- a/vfa_blog/VariableFlipAngle.ipynb
+++ b/vfa_blog/VariableFlipAngle.ipynb
@@ -614,6 +614,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "source": [
+    "<div class=blog_body>\n",
+    "<p style=\"text-align:justify;\">\n",
+    "Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. \n",
+    "</p>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "source": [
+    "<div class=figure_caption>\n",
+    "<p style=\"text-align:justify;\">\n",
+    "<b>\n",
+    "Figure 4. Text Text\n",
+    "</b>\n",
+    "</p>\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -643,7 +671,6 @@
     "% To see all the options available, run `help vfa_t1.analytical_solution`\n",
     "\n",
     "for ii = 1:length(Nex_range)\n",
-    "    disp(ii)\n",
     "    params.Nex = Nex_range(ii);\n",
     "    \n",
     "    params.crushFlag = 1;\n",
@@ -869,7 +896,7 @@
     "<div class=figure_caption>\n",
     "<p style=\"text-align:justify;\">\n",
     "<b>\n",
-    "Figure 5. Example variable flip angle dataset of a healthy adult brain (left).\n",
+    "Figure 5. text\n",
     "</b>\n",
     "</div>"
    ]
@@ -1191,8 +1218,31 @@
    "source": [
     "<div class=blog_body>\n",
     "<p style=\"text-align:justify;\">\n",
-    "Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text \n",
+    "Discuss approximatinos, ways to  fits, etc\n",
     "</p>\n",
+    "\n",
+    "<p style=\"text-align:justify;\">\n",
+    "<center><img src=\"equation4.png\" style=\"width:auto;height:50px;margin-bottom: 50px;margin-top: 50px\"></center>\n",
+    "</p>\n",
+    "\n",
+    "<p style=\"text-align:justify;\">\n",
+    "Discuss approximatinos, ways to  fits, etc\n",
+    "</p>\n",
+    "\n",
+    "<p style=\"text-align:justify;\">\n",
+    "<center><img src=\"equation5.png\" style=\"width:auto;height:50px;margin-bottom: 50px;margin-top: 50px\"></center>\n",
+    "</p>\n",
+    "\n",
+    "<p style=\"text-align:justify;\">\n",
+    "Discuss approximatinos, ways to  fits, etc\n",
+    "</p>\n",
+    "\n",
+    "<p style=\"text-align:justify;\">\n",
+    "<center><img src=\"equation6.png\" style=\"width:auto;height:50px;margin-bottom: 50px;margin-top: 50px\"></center>\n",
+    "</p>\n",
+    "\n",
+    "\n",
+    "\n",
     "</div>"
    ]
   },
