Fix Figure 5 FA ordering in the hoverinfo

--- a/vfa_blog/VariableFlipAngle.ipynb
+++ b/vfa_blog/VariableFlipAngle.ipynb
@@ -937,7 +937,7 @@
     "% To see all the options available, run `help vfa_t1.analytical_solution`\n",
     "\n",
     "params.TR = 0.025;\n",
-    "params.EXC_FA = [1:4,5:5:90];\n",
+    "params.EXC_FA = [2:9,10:5:90];\n",
     "\n",
     "% White matter\n",
     "x.M0 = 1;\n",
@@ -978,7 +978,7 @@
     "% All times are in milliseconds\n",
     "% All flip angles are in degrees\n",
     "\n",
-    "params_highres.EXC_FA = [1:90];\n",
+    "params_highres.EXC_FA = [2:1:90];\n",
     "\n",
     "%% Calculate signals\n",
     "%\n",
@@ -1051,7 +1051,7 @@
     "        x = signal_WM_div_tan,\n",
     "        y = signal_WM_div_sin,\n",
     "        name = 'Analytical Solutions',\n",
-    "        text = np.flip(params_highres[\"EXC_FA\"]),\n",
+    "        text = params_highres[\"EXC_FA\"],\n",
     "        mode = 'lines',\n",
     "        xaxis='x2',\n",
     "        yaxis='y2',\n",
@@ -1085,7 +1085,7 @@
     "        x = data_mean_div_tan,\n",
     "        y = data_mean_div_sin,\n",
     "        name = 'Linear Form - Noisy',\n",
-    "        text = np.flip([\"Flip angle: \" + str(x) + \"°\" for x in params[\"EXC_FA\"]]),\n",
+    "        text = [\"Flip angle: \" + str(x) + \"°\" for x in params[\"EXC_FA\"]],\n",
     "        mode = 'markers',\n",
     "        xaxis='x2',\n",
     "        yaxis='y2',\n",
