Gdoc review: Spoiling section?

--- a/vfa_blog/VariableFlipAngle.ipynb
+++ b/vfa_blog/VariableFlipAngle.ipynb
@@ -621,7 +621,7 @@
    "source": [
     "<div class=blog_body>\n",
     "<p style=\"text-align:justify;\">\n",
-    "Sufficient spoiling is likely the most challenging parameter to control for in a VFA experiment. A combination of both gradient spoiling (to dephase the signal) and RF phase spoiling (phase increments to avoid stimulated echoes) are typically recommended (Figure 4). It has also been shown that with the use of very strong spoiling gradients, diffusion effects need to be considered to accurately estimate the spoiling efficacy (not shown in Figure 4), and spoiling in this regime provides optimal spoiling conditions (Yarnykh 2010).\n",
+    "Sufficient spoiling is likely the most challenging parameter to control for in a VFA experiment. A combination of both gradient spoiling and RF phase spoiling (Zur et al. 1991; Bernstein et al. 2004) are typically recommended (Figure 4). It has also been shown that the use of very strong  gradients, introduces diffusion effects (not considered in Figure 4), further improving the spoiling efficacy in the VFA pulse sequence (Yarnykh 2010).\n",
     "</p>\n",
     "</div>"
    ]
@@ -635,7 +635,7 @@
     "<div class=figure_caption>\n",
     "<p style=\"text-align:justify;\">\n",
     "<b>\n",
-    "Figure 4. Signal curves estimated using Bloch simulations for three categories of signal spoiling: (1) ideal spoiling (blue), gradient & RF Spoiling (orange), and no spoiling (green). Simulations details: TR = 25 ms, T<sub>1</sub> = 900 ms, T<sub>e</sub> = 100 ms, TE = 5 ms, 100 spins. For the ideal spoiling case, the transverse magnetization is set to zero at the end of each TR. For the gradient & RF spoiling case, each spin is rotated by different increments of phase (2𝜋 / # of spins) to simulate complete decoherence from gradient spoiling, and the RF phase of the excitation pulse is incremented by the repetition number times 117° after each TR to minimize stimulated echoes.\n",
+    "Figure 4. Signal curves estimated using Bloch simulations for three categories of signal spoiling: (1) ideal spoiling (blue), gradient & RF Spoiling (orange), and no spoiling (green). Simulations details: TR = 25 ms, T<sub>1</sub> = 900 ms, T<sub>e</sub> = 100 ms, TE = 5 ms, 100 spins. For the ideal spoiling case, the transverse magnetization is set to zero at the end of each TR. For the gradient & RF spoiling case, each spin is rotated by different increments of phase (2𝜋 / # of spins) to simulate complete decoherence from gradient spoiling, and the RF phase of the excitation pulse is  ɸ<sub><i>n</i></sub> = ɸ<sub><i>n</i>-1</sub> + <i>n</i>ɸ<sub>0</sub> = ½ ɸ<sub>0</sub>(<i>n</i><sup>2</sup> + <i>n</i> + 2) (Bernstein et al. 2004) with ɸ<sub>0</sub> = 117° (Zur et al. 1991) after each TR to minimize stimulated echoes.\n",
     "</b>\n",
     "</p>\n",
     "</div>"
@@ -1815,6 +1815,10 @@
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
+    "Bernstein, M., King, K. & Zhou, X., 2004. Handbook of MRI Pulse Sequences, Elsevier.\n",
+    "</p>\n",
+    "\n",
+    "<p style=\"text-align:justify;\">\n",
     "Boudreau, M. et al., 2017. B1 mapping for bias-correction in quantitative T1 imaging of the brain at 3T using standard pulse sequences. Journal of magnetic resonance imaging: JMRI, 46(6), pp.1673–1682.\n",
     "</p>\n",
     "\n",
@@ -1900,6 +1904,10 @@
     "\n",
     "<p style=\"text-align:justify;\">\n",
     "Yuan, J. et al., 2012. Quantitative evaluation of dual-flip-angle T1 mapping on DCE-MRI kinetic parameter estimation in head and neck. Quantitative imaging in medicine and surgery, 2(4), pp.245–253.\n",
+    "</p>\n",
+    "\n",
+    "<p style=\"text-align:justify;\">\n",
+    "Zur, Y., Wood, M.L. & Neuringer, L.J., 1991. Spoiling of transverse magnetization in steady-state sequences. Magnetic resonance in medicine: official journal of the Society of Magnetic Resonance in Medicine / Society of Magnetic Resonance in Medicine, 21(2), pp.251–263.\n",
     "</p>\n",
     "\n",
     "</div>"
