Gdoc review: fix citations formatting

--- a/vfa_blog/VariableFlipAngle.ipynb
+++ b/vfa_blog/VariableFlipAngle.ipynb
@@ -1811,103 +1811,103 @@
    "source": [
     "<div class=biblio_body>\n",
     "<p style=\"text-align:justify;\">\n",
-    "Baudrexel, S. et al., 2018. T1 mapping with the variable flip angle technique: A simple correction for insufficient spoiling of transverse magnetization. Magnetic resonance in medicine: official journal of the Society of Magnetic Resonance in Medicine / Society of Magnetic Resonance in Medicine, 79(6), pp.3082–3092.\n",
+    "Baudrexel, S. et al., 2018. T<sub>1</sub> mapping with the variable flip angle technique: A simple correction for insufficient spoiling of transverse magnetization. <i>Magn. Reson. Med.</i>, 79(6), pp.3082–3092.\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "Bernstein, M., King, K. & Zhou, X., 2004. Handbook of MRI Pulse Sequences, Elsevier.\n",
+    "Bernstein, M., King, K. & Zhou, X., 2004. <i>Handbook of MRI Pulse Sequences</i>, Elsevier.\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "Boudreau, M. et al., 2017. B1 mapping for bias-correction in quantitative T1 imaging of the brain at 3T using standard pulse sequences. Journal of magnetic resonance imaging: JMRI, 46(6), pp.1673–1682.\n",
+    "    Boudreau, M. et al., 2017. B<sub>1</sub> mapping for bias-correction in quantitative T<sub>1</sub> imaging of the brain at 3T using standard pulse sequences. <i>J. Magn. Reson. Imaging</i>, 46(6), pp.1673–1682.\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "Cercignani, M. et al., 2005. Three-dimensional quantitative magnetisation transfer imaging of the human brain. NeuroImage, 27(2), pp.436–441.\n",
+    "Cercignani, M. et al., 2005. Three-dimensional quantitative magnetisation transfer imaging of the human brain. <i>Neuroimage</i>, 27(2), pp.436–441.\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "Chang, L.-C. et al., 2008. Linear least-squares method for unbiased estimation of T1 from SPGR signals. Magnetic resonance in medicine: official journal of the Society of Magnetic Resonance in Medicine / Society of Magnetic Resonance in Medicine, 60(2), pp.496–501.\n",
+    "    Chang, L.-C. et al., 2008. Linear least-squares method for unbiased estimation of T<sub>1</sub> from SPGR signals. <i>Magn. Reson. Med.</i>, 60(2), pp.496–501.\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "Christensen, K.A. et al., 1974. Optimal determination of relaxation times of fourier transform nuclear magnetic resonance. Determination of spin-lattice relaxation times in chemically polarized species. The Journal of physical chemistry, 78(19), pp.1971–1977.\n",
+    "Christensen, K.A. et al., 1974. Optimal determination of relaxation times of fourier transform nuclear magnetic resonance. Determination of spin-lattice relaxation times in chemically polarized species. <i>J. Phys. Chem.</i>, 78(19), pp.1971–1977.\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "Deoni, S.C.L., Rutt, B.K. & Peters, T.M., 2003. Rapid combined T1 and T2 mapping using gradient recalled acquisition in the steady state. Magnetic resonance in medicine: official journal of the Society of Magnetic Resonance in Medicine / Society of Magnetic Resonance in Medicine, 49(3), pp.515–526.\n",
+    "Deoni, S.C.L., Rutt, B.K. & Peters, T.M., 2003. Rapid combined T<sub>1</sub> and T<sub>2</sub> mapping using gradient recalled acquisition in the steady state. <i>Magn. Reson. Med.</i>, 49(3), pp.515–526.\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "Ernst, R.R. & Anderson, W.A., 1966. Application of Fourier Transform Spectroscopy to Magnetic Resonance. The Review of scientific instruments, 37(1), pp.93–102.\n",
+    "Ernst, R.R. & Anderson, W.A., 1966. Application of Fourier Transform Spectroscopy to Magnetic Resonance. <i>Rev. Sci. Instrum.</i>, 37(1), pp.93–102.\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "Fram, E.K. et al., 1987. Rapid calculation of T1 using variable flip angle gradient refocused imaging. Magnetic resonance imaging, 5(3), pp.201–208.\n",
+    "Fram, E.K. et al., 1987. Rapid calculation of T<sub>1</sub> using variable flip angle gradient refocused imaging. <i>Magn. Reson. Imaging</i>, 5(3), pp.201–208.\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "Gupta, R.K., 1977. A new look at the method of variable nutation angle for the measurement of spin-lattice relaxation times using fourier transform NMR. Journal of magnetic resonance , 25(1), pp.231–235.\n",
+    "Gupta, R.K., 1977. A new look at the method of variable nutation angle for the measurement of spin-lattice relaxation times using fourier transform NMR. <i>J. Magn. Reson.</i>, 25(1), pp.231–235.\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "Homer, J. & Beevers, M.S., 1985. Driven-equilibrium single-pulse observation of T1 relaxation. A reevaluation of a rapid “new” method for determining NMR spin-lattice relaxation times. Journal of magnetic resonance , 63(2), pp.287–297.\n",
+    "Homer, J. & Beevers, M.S., 1985. Driven-equilibrium single-pulse observation of T<sub>1</sub> relaxation. A reevaluation of a rapid “new” method for determining NMR spin-lattice relaxation times. <i>J. Magn. Reson.</i>, 63(2), pp.287–297.\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "Lee, Y., Callaghan, M.F. & Nagy, Z., 2017. Analysis of the Precision of Variable Flip Angle T1 Mapping with Emphasis on the Noise Propagated from RF Transmit Field Maps. Frontiers in neuroscience, 11, p.106.\n",
+    "Lee, Y., Callaghan, M.F. & Nagy, Z., 2017. Analysis of the Precision of Variable Flip Angle T<sub>1</sub> Mapping with Emphasis on the Noise Propagated from RF Transmit Field Maps. <i>Front. Neurosci.</i>, 11, p.106.\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "Liberman, G., Louzoun, Y. & Ben Bashat, D., 2014. T₁ mapping using variable flip angle SPGR data with flip angle correction. Journal of magnetic resonance imaging: JMRI, 40(1), pp.171–180.\n",
+    "Liberman, G., Louzoun, Y. & Ben Bashat, D., 2014. T<sub>1</sub> mapping using variable flip angle SPGR data with flip angle correction. <i>J. Magn. Reson. Imaging</i>, 40(1), pp.171–180.\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "Li, Z.F. et al., 2018. A simple B 1 correction method for dynamic contrast-enhanced MRI. Physics in medicine and biology, 63(16), p.16NT01.\n",
+    "Li, Z.F. et al., 2018. A simple B<sub>1</sub> correction method for dynamic contrast-enhanced MRI. <i>Phys. Med. Biol.</i>, 63(16), p.16NT01.\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "Lutti, A. & Weiskopf, N., 2013. Optimizing the accuracy of T1 mapping accounting for RF non-linearities and spoiling characteristics in FLASH imaging. In Proceedings of the 21st Annual Meeting of ISMRM, Salt Lake City, Utah, USA. p. 2478.\n",
+    "Lutti, A. & Weiskopf, N., 2013. Optimizing the accuracy of T<sub>1</sub> mapping accounting for RF non-linearities and spoiling characteristics in FLASH imaging. In <i>Proceedings of the 21st Annual Meeting of ISMRM, Salt Lake City, Utah, USA.</i> p. 2478.\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "Samson, R.S. et al., 2006. A simple correction for B1 field errors in magnetization transfer ratio measurements. Magnetic resonance imaging, 24(3), pp.255–263.\n",
+    "Samson, R.S. et al., 2006. A simple correction for B<sub>1</sub> field errors in magnetization transfer ratio measurements. <i>Magn. Reson. Imaging</i>, 24(3), pp.255–263.\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "Schabel, M.C. & Morrell, G.R., 2009. Uncertainty in T(1) mapping using the variable flip angle method with two flip angles. Physics in medicine and biology, 54(1), pp.N1–8.\n",
+    "Schabel, M.C. & Morrell, G.R., 2009. Uncertainty in T<sub>1</sub> mapping using the variable flip angle method with two flip angles. <i>Phys. Med. Biol.</i>, 54(1), pp.N1–8.\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "Sled, J.G. & Pike, G.B., 1998. Standing-wave and RF penetration artifacts caused by elliptic geometry: an electrodynamic analysis of MRI. IEEE transactions on medical imaging, 17(4), pp.653–662.\n",
+    "Sled, J.G. & Pike, G.B., 1998. Standing-wave and RF penetration artifacts caused by elliptic geometry: an electrodynamic analysis of MRI. <i>IEEE Trans. Med. Imaging</i>, 17(4), pp.653–662.\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "Stikov, N. et al., 2015. On the accuracy of T1 mapping: Searching for common ground. Magn. Reson. Med., 73(2), pp.514–522.\n",
+    "Stikov, N. et al., 2015. On the accuracy of T<sub>1</sub> mapping: Searching for common ground. <i>Magn. Reson. Med.</i>, 73(2), pp.514–522.\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "Sung, K., Daniel, B.L. & Hargreaves, B.A., 2013. Transmit B1+ field inhomogeneity and T1 estimation errors in breast DCE-MRI at 3 tesla. Journal of magnetic resonance imaging: JMRI, 38(2), pp.454–459.\n",
+    "Sung, K., Daniel, B.L. & Hargreaves, B.A., 2013. Transmit B<sub>1</sub><sup>+</sup> field inhomogeneity and T<sub>1</sub> estimation errors in breast DCE-MRI at 3 tesla. <i>J. Magn. Reson. Imaging</i>, 38(2), pp.454–459.\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "Wang, J., Qiu, M. & Constable, R.T., 2005. In vivo method for correcting transmit/receive nonuniformities with phased array coils. Magnetic resonance in medicine: official journal of the Society of Magnetic Resonance in Medicine / Society of Magnetic Resonance in Medicine, 53(3), pp.666–674.\n",
+    "Wang, J., Qiu, M. & Constable, R.T., 2005. In vivo method for correcting transmit/receive nonuniformities with phased array coils. <i>Magn. Reson. Med.</i>, 53(3), pp.666–674.\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "Yarnykh, V.L., 2010. Optimal radiofrequency and gradient spoiling for improved accuracy of T1 and B1 measurements using fast steady-state techniques. Magnetic resonance in medicine: official journal of the Society of Magnetic Resonance in Medicine / Society of Magnetic Resonance in Medicine, 63(6), pp.1610–1626.\n",
+    "Yarnykh, V.L., 2010. Optimal radiofrequency and gradient spoiling for improved accuracy of T<sub>1</sub> and B<sub>1</sub> measurements using fast steady-state techniques. <i>Magn. Reson. Med.</i>, 63(6), pp.1610–1626.\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "Yarnykh, V.L., 2002. Pulsed Z-spectroscopic imaging of cross-relaxation parameters in tissues for human MRI: theory and clinical applications. Magnetic resonance in medicine: official journal of the Society of Magnetic Resonance in Medicine / Society of Magnetic Resonance in Medicine, 47(5), pp.929–939.\n",
+    "Yarnykh, V.L., 2002. Pulsed Z-spectroscopic imaging of cross-relaxation parameters in tissues for human MRI: theory and clinical applications. <i>Magn. Reson. Med.</i>, 47(5), pp.929–939.\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "Yuan, J. et al., 2012. Quantitative evaluation of dual-flip-angle T1 mapping on DCE-MRI kinetic parameter estimation in head and neck. Quantitative imaging in medicine and surgery, 2(4), pp.245–253.\n",
+    "Yuan, J. et al., 2012. Quantitative evaluation of dual-flip-angle T<sub>1</sub> mapping on DCE-MRI kinetic parameter estimation in head and neck. <i>Quant. Imaging Med. Surg.</i>, 2(4), pp.245–253.\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "Zur, Y., Wood, M.L. & Neuringer, L.J., 1991. Spoiling of transverse magnetization in steady-state sequences. Magnetic resonance in medicine: official journal of the Society of Magnetic Resonance in Medicine / Society of Magnetic Resonance in Medicine, 21(2), pp.251–263.\n",
+    "Zur, Y., Wood, M.L. & Neuringer, L.J., 1991. Spoiling of transverse magnetization in steady-state sequences. <i>Magn. Reson. Med.</i>, 21(2), pp.251–263.\n",
     "</p>\n",
     "\n",
     "</div>"
