Ilana feedback: change colors of figure 5 axis labels to make the relationship between Linve vs. Axis more clear

--- a/vfa_blog/VariableFlipAngle.ipynb
+++ b/vfa_blog/VariableFlipAngle.ipynb
@@ -1125,7 +1125,8 @@
     "            text='Excitation Flip Angle (<i>θ<sub>n</sub></i>)',\n",
     "            font=dict(\n",
     "                family='Times New Roman',\n",
-    "                size=22\n",
+    "                size=22,\n",
+    "                color=('rgb(15, 65, 113)')\n",
     "            ),\n",
     "            xref='paper',\n",
     "            yref='paper'\n",
@@ -1137,7 +1138,8 @@
     "            text='Signal (<i>S<sub>n</sub></i>)',\n",
     "            font=dict(\n",
     "                family='Times New Roman',\n",
-    "                size=22\n",
+    "                size=22,\n",
+    "                color=('rgb(15, 65, 113)')\n",
     "            ),\n",
     "            textangle=-90,\n",
     "            xref='paper',\n",
@@ -1150,7 +1152,8 @@
     "            text='<i>S<sub>n</sub></i> / tan(<i>θ<sub>n</sub></i>)',\n",
     "            font=dict(\n",
     "                family='Times New Roman',\n",
-    "                size=22\n",
+    "                size=22,\n",
+    "                color=('rgb(120, 7, 14)') \n",
     "            ),\n",
     "            xref='paper',\n",
     "            yref='paper'\n",
@@ -1162,7 +1165,8 @@
     "            text='<i>S<sub>n</sub></i> / sin(<i>θ<sub>n</sub></i>)',\n",
     "            font=dict(\n",
     "                family='Times New Roman',\n",
-    "                size=22\n",
+    "                size=22,\n",
+    "                color=('rgb(120, 7, 14)') \n",
     "            ),\n",
     "            xref='paper',\n",
     "            yref='paper',\n",
