Stikov review: Add Ernst angle paragraph, and introduce equation earlier

--- a/vfa_blog/VariableFlipAngle.ipynb
+++ b/vfa_blog/VariableFlipAngle.ipynb
@@ -408,8 +408,18 @@
    },
    "source": [
     "<div class=blog_body>\n",
+    "\n",
     "<p style=\"text-align:justify;\">\n",
-    "The closed-form solution (Equation 1) makes several assumptions which in practice may not always hold true if care is not taken. Mainly, it is assumed that the longitudinal magnetization has reached a steady state after a large number of TRs, and that the transverse magnetization is perfectly spoiled at the end of each TR. Bloch simulations provide a more realistic estimate of the signal, as they simulate the evolution of the magnetization of a set of spins at each pulse sequence event over the entire time of the experiment. As can be seen from Figure 3, the number of repetitions required to reach a steady state not only depends on T<sub>1</sub>, but also on the flip angle; flip angles near the Ernst angle need more TRs to reach a steady state (Ernst & Anderson 1966). Preparation pulses or an outward-in k-space acquisition pattern are typically sufficient to reach a steady state by the time that the center of k-space is acquired, which is where most of the image contrast resides.\n",
+    "From Figure 2, it is clearly seen that the flip angle at which the steady-state signal is maximized is dependent on the T1 and TR values. This flip angle is a well known quantity, called the Ernst angle (Ernst & Anderson 1966), which can be solved analytically from Equation 1 using properties of calculus:\n",
+    "</p>\n",
+    "\n",
+    "\n",
+    "<p style=\"text-align:justify;\">\n",
+    "<center><img src=\"equation2.png\" style=\"width:auto;height:50px;margin-bottom: 50px;margin-top: 50px\"></center>\n",
+    "</p>\n",
+    "\n",
+    "<p style=\"text-align:justify;\">\n",
+    "The closed-form solution (Equation 1) makes several assumptions which in practice may not always hold true if care is not taken. Mainly, it is assumed that the longitudinal magnetization has reached a steady state after a large number of TRs, and that the transverse magnetization is perfectly spoiled at the end of each TR. Bloch simulations provide a more realistic estimate of the signal, as they simulate the evolution of the magnetization of a set of spins at each pulse sequence event over the entire time of the experiment. As can be seen from Figure 3, the number of repetitions required to reach a steady state not only depends on T<sub>1</sub>, but also on the flip angle; flip angles near the Ernst angle need more TRs to reach a steady state. Preparation pulses or an outward-in k-space acquisition pattern are typically sufficient to reach a steady state by the time that the center of k-space is acquired, which is where most of the image contrast resides.\n",
     "</p>\n",
     "</div>"
    ]
@@ -873,7 +883,7 @@
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "<center><img src=\"equation2.png\" style=\"width:auto;height:50px;margin-bottom: 50px;margin-top: 50px\"></center>\n",
+    "<center><img src=\"equation3.png\" style=\"width:auto;height:50px;margin-bottom: 50px;margin-top: 50px\"></center>\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
@@ -881,7 +891,7 @@
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "<center><img src=\"equation3.png\" style=\"width:auto;height:50px;margin-bottom: 50px;margin-top: 50px\"></center>\n",
+    "<center><img src=\"equation4.png\" style=\"width:auto;height:50px;margin-bottom: 50px;margin-top: 50px\"></center>\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
@@ -889,11 +899,11 @@
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "<center><img src=\"equation4.png\" style=\"width:auto;height:50px;margin-bottom: 50px;margin-top: 50px\"></center>\n",
+    "<center><img src=\"equation5.png\" style=\"width:auto;height:50px;margin-bottom: 50px;margin-top: 50px\"></center>\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "If data were acquired using only two flip angles – a very common VFA acquisition protocol – then the slope can be calculated using the elementary slope equation. Figure 5 displays both Equation 1 and 3 plotted for a noisy dataset.\n",
+    "If data were acquired using only two flip angles – a very common VFA acquisition protocol – then the slope can be calculated using the elementary slope equation. Figure 5 displays both Equation 1 and 4 plotted for a noisy dataset.\n",
     "</p>\n",
     "\n",
     "</div>"
@@ -908,7 +918,7 @@
     "<div class=figure_caption>\n",
     "<p style=\"text-align:justify;\">\n",
     "<b>\n",
-    "Figure 5. Mean and standard deviation of the VFA signal plotted using the nonlinear form (Equation 1 – blue) and linear form (Equation 3 – red). Monte Carlo simulation details: SNR = 25, N = 1000. VFA simulation details: TR = 25 ms, T<sub>1</sub> = 900 ms.\n",
+    "Figure 5. Mean and standard deviation of the VFA signal plotted using the nonlinear form (Equation 1 – blue) and linear form (Equation 4 – red). Monte Carlo simulation details: SNR = 25, N = 1000. VFA simulation details: TR = 25 ms, T<sub>1</sub> = 900 ms.\n",
     "</b>\n",
     "</div>"
    ]
@@ -1235,15 +1245,11 @@
     "<div class=blog_body>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "There are two important imaging protocol design considerations that should be taken into account when planning to use VFA: (1) how many and which flip angles to use to acquire VFA data, and (2) correcting inaccurate flip angles due to transmit RF field inhomogeneity. Most VFA experiments use the minimum number of required flip angles (two) to minimize acquisition time. For this case, it has been shown that the flip angle choice resulting in the best precision for VFA T<sub>1</sub> estimates for a sample with a single T<sub>1</sub> value (i.e. single tissue) are the two flip angles that result in 71% of the maximum possible steady-state signal (at the Ernst angle) (Deoni et al. 2003; Schabel & Morrell 2009).\n",
+    "There are two important imaging protocol design considerations that should be taken into account when planning to use VFA: (1) how many and which flip angles to use to acquire VFA data, and (2) correcting inaccurate flip angles due to transmit RF field inhomogeneity. Most VFA experiments use the minimum number of required flip angles (two) to minimize acquisition time. For this case, it has been shown that the flip angle choice resulting in the best precision for VFA T<sub>1</sub> estimates for a sample with a single T<sub>1</sub> value (i.e. single tissue) are the two flip angles that result in 71% of the maximum possible steady-state signal (i.e. at the Ernst angle) (Deoni et al. 2003; Schabel & Morrell 2009).\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "<center><img src=\"equation5.png\" style=\"width:auto;height:50px;margin-bottom: 50px;margin-top: 50px\"></center>\n",
-    "</p>\n",
-    "\n",
-    "<p style=\"text-align:justify;\">\n",
-    "Time allowing, additional flip angles are often acquired at higher values and in between the two above, because greater signal differences between tissue T<sub>1</sub> values are present there (e.g. Figure 2). Also, for more than two flip angles, Equations 1 and 3 do not have the same noise weighting for each fitting point, which may bias linear least-square T<sub>1</sub> estimates at lower SNRs. Thus, it has been recommended that low SNR data should be fitted with either Equation 1 using non-linear least-squares (slower fitting) or with a weighted linear least-squares form of Equation 3 (Chang et al. 2008).\n",
+    "Time allowing, additional flip angles are often acquired at higher values and in between the two above, because greater signal differences between tissue T<sub>1</sub> values are present there (e.g. Figure 2). Also, for more than two flip angles, Equations 1 and 4 do not have the same noise weighting for each fitting point, which may bias linear least-square T<sub>1</sub> estimates at lower SNRs. Thus, it has been recommended that low SNR data should be fitted with either Equation 1 using non-linear least-squares (slower fitting) or with a weighted linear least-squares form of Equation 4 (Chang et al. 2008).\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
@@ -1510,7 +1516,7 @@
    "source": [
     "<div class=blog_body>\n",
     "<p style=\"text-align:justify;\">\n",
-    "Figure 7 displays an example VFA dataset and a B<sub>1</sub> map in a healthy brain, along with the T<sub>1</sub> map estimated using a linear fit (Equations 3 and 4).\n",
+    "Figure 7 displays an example VFA dataset and a B<sub>1</sub> map in a healthy brain, along with the T<sub>1</sub> map estimated using a linear fit (Equations 4 and 5).\n",
     "</p>\n",
     "</div>"
    ]
@@ -1524,7 +1530,7 @@
     "<div class=figure_caption>\n",
     "<p style=\"text-align:justify;\">\n",
     "<b>\n",
-    "Figure 7. Example variable flip angle dataset and B<sub>1</sub> map of a healthy adult brain (left). The relevant VFA protocol parameters used were: TR = 15 ms, <i>θ<sub>nominal</sub></i> = 3° and 20°. The T<sub>1</sub> map (right) was fitted using a linear regression (Equations 3 and 4).\n",
+    "Figure 7. Example variable flip angle dataset and B<sub>1</sub> map of a healthy adult brain (left). The relevant VFA protocol parameters used were: TR = 15 ms, <i>θ<sub>nominal</sub></i> = 3° and 20°. The T<sub>1</sub> map (right) was fitted using a linear regression (Equations 4 and 5).\n",
     "</b>\n",
     "</div>"
    ]
